WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282114
[WASM] Throw exceptions for invalid wasm exception type signature
https://bugs.webkit.org/show_bug.cgi?id=282114
Summary
[WASM] Throw exceptions for invalid wasm exception type signature
Yijia Huang
Reported
2024-10-25 13:02:32 PDT
<
rdar://137224743
>
Attachments
Add attachment
proposed patch, testcase, etc.
Yijia Huang
Comment 1
2024-10-25 13:37:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35736
EWS
Comment 2
2024-10-27 15:09:37 PDT
Committed
285752@main
(6f99f6b7d15c): <
https://commits.webkit.org/285752@main
> Reviewed commits have been landed. Closing PR #35736 and removing active labels.
EWS
Comment 3
2024-10-29 11:45:33 PDT
Committed
283286.378@safari-7620-branch
(2ade53643f9a): <
https://commits.webkit.org/283286.378@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2139 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug