[WASM] Throw exceptions for invalid wasm exception type signature https://bugs.webkit.org/show_bug.cgi?id=282114 rdar://137224743

Reviewed by Keith Miller and Mark Lam.

When parsing WASM exceptions, we should throw exactions if the
corresponding types don't have function signatures.

* JSTests/wasm/gc/bug137224743.js: Added.
(catch):
* Source/JavaScriptCore/wasm/WasmSectionParser.cpp:
(JSC::Wasm::SectionParser::parseException):
* Source/JavaScriptCore/wasm/WasmTypeDefinition.h:
* Source/JavaScriptCore/wasm/WasmTypeDefinitionInlines.h:

Canonical link: https://commits.webkit.org/285752@main